Fix word wraps in the textarea

--- a/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
+++ b/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
@@ -73,7 +73,6 @@
     align-items: flex-start
     justify-content: flex-start
     padding: 5px
-    word-break: break-all
 
 .inputItem
     flex: 1
